<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.exxeta.bibleschedule.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_number_of_checked"
        android:title="@string/action_show_number_of_checked"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_from_csv"
        android:title="@string/action_import_from_csv"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
